test/cases/initialisation/no_lookahead.c
// RUN: %check -e %s

main()
{
	int i = j, j = 0; // CHECK: error: undeclared identifier "j"
}
